Fixed some layout issues.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -354,9 +354,9 @@ div.social-share-button {
 }
 
 #search {
-  font-size: .5em;
+  font-size: 1.2em;
   height: 35px;
-  width: 36%;
+  width: 50%;
 }
 
 #search-content {
